--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.16.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.3",
+    "pug": "^2.0.3",
     "uniqid": "^5.0.3"
   }
 }
